people and research page completed

--- a/people.html
+++ b/people.html
@@ -53,7 +53,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/people/mla.png" alt="..." /></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder">Dr. Md. Mamun Molla</h2>
+                            <h2 class="fw-bolder">Dr. Md. Mamun Molla</h2><h4>Director</h4>
                             <p class="lead fw-normal text-muted mb-0">Postdoctoral Research Associate, Dept. of Mechanical & Manufacturing Engineering
                                 University of Manitoba, Canada
                                 PhD in Mechanical Engineering, thesis in Computational Fluid Dynamics (CFD) University of Glasgow, UK
@@ -143,7 +143,7 @@
             <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="https://dummyimage.com/270x300/c4c2c4/05050d.png&text=no+photo" alt="No photo" /></div>
+                        <div class="col-lg-6"><img class="img-mem rounded mb-5 mb-lg-0" src="assets/people/no-photo.png" alt="No photo" /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Sadia Siddiqa</h2>
                             <p class="lead fw-normal text-muted mb-0">
@@ -168,40 +168,40 @@
                     </div>
                 </div>
             </section>
-            <!-- Team members section-->
+            <!-- Team members section Research Assistants-->
             <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
-                        <h2 class="fw-bolder">Our team</h2>
-                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and success</p>
+                        <h2 class="fw-bolder">Research Assistants</h2>
+                        <p class="lead fw-normal text-muted mb-5">Dedicated to knowledge and mankind</p>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture7.png" alt="..." />
-                                <h5 class="fw-bolder">Johny Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                <h5 class="fw-bolder">Amzad Hossain (2021-Present)</h5>
+                                <div class="fst-italic text-muted">Email: amzad.hossain01@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture9.png" alt="..." />
-                                <h5 class="fw-bolder">Any Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
+                                <h5 class="fw-bolder">Meratun Junnut Anee (2021-Present)</h5>
+                                <div class="fst-italic text-muted">Email: meratun.anee@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture12.png" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
+                                <h5 class="fw-bolder">Mashiyat Khan</h5>
+                                <div class="fst-italic text-muted">Email: mashiyat.khan@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture8.png" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <h5 class="fw-bolder">Md Mahadul Islam (2021-Present)</h5>
+                                <div class="fst-italic text-muted">Email: mahadul.islam@northsouth.edu</div>
                             </div>
                         </div>
                     </div>
@@ -209,59 +209,102 @@
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture11.png" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                <h5 class="fw-bolder">Shayekh Ahmed Khan (2022-Present)</h5>
+                                <div class="fst-italic text-muted">Email: shayekh.ahmed@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture10.png" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
+                                <h5 class="fw-bolder">Nur E Jannat Asha (2021-Present)</h5>
+                                <div class="fst-italic text-muted">Email: nur.eannat@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture13.png" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
+                                <h5 class="fw-bolder">Shapla Akter (2022-Present)</h5>
+                                <div class="fst-italic text-muted">Email: shapla.akter@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture14.png" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/no-pic.png" alt="..." />
+                                <h5 class="fw-bolder">Umma Habiba Akter (2021-Present)</h5>
+                                <div class="fst-italic text-muted">Email: umma.akter@northsouth.edu</div>
                             </div>
                         </div>
                     </div>
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture15.png" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture14.png" alt="..." />
+                                <h5 class="fw-bolder">Jawad Ibn Ahad (2022-Present)</h5>
+                                <div class="fst-italic text-muted">Email: jawad.ibn@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture16.png" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
+                                <h5 class="fw-bolder">Israt Jahan Supti (2023- Present)</h5>
+                                <div class="fst-italic text-muted">Email: israt.supti1@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-sm-0">
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture17.png" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
+                                <h5 class="fw-bolder">Ismat Jahan (2023-Present)</h5>
+                                <div class="fst-italic text-muted">Email: ismat.jahan@northsouth.edu</div>
                             </div>
                         </div>
                         <div class="col mb-5">
                             <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture15.png" alt="..." />
+                                <h5 class="fw-bolder">Khairunnnahar Suchona (2023-Present)</h5>
+                                <div class="fst-italic text-muted">Email: ksuchana97@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
+                        <div class="col mb-5 mb-xl-0">
+                            <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/Picture18.png" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
+                                <h5 class="fw-bolder">Muhammad Zawad Mahmud (2022-Present)</h5>
+                                <div class="fst-italic text-muted">Email:zawad.mahmud1@northsouth.edu</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Former Members -->
+            <section class="py-5 bg-light">
+                <div class="container px-5 my-5">
+                    <div class="text-center mb-5">
+                        <h2 class="fw-bolder">Former Members</h2>
+                    </div>
+                    <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
+                        <div class="col mb-5 mb-5 mb-xl-0">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/no-pic.png" alt="..." />
+                                <h5 class="fw-bolder">Sadia Afsana</h5>
+                            </div>
+                        </div>
+                        <div class="col mb-5 mb-5 mb-xl-0">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/no-pic.png" alt="..." />
+                                <h5 class="fw-bolder">Mashnoon Islam</h5>
+                            </div>
+                        </div>
+                        <div class="col mb-5 mb-5 mb-sm-0">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/no-pic.png" alt="..." />
+                                <h5 class="fw-bolder">Jesia Kader Yuki</h5>
+                            </div>
+                        </div>
+                        <div class="col mb-5">
+                            <div class="text-center">
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/people/no-pic.png" alt="..." />
+                                <h5 class="fw-bolder">Sheikh Hassan</h5>
                             </div>
                         </div>
                     </div>
