--- a/research.html
+++ b/research.html
@@ -33,82 +33,174 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="py-5">
+            <header class="py-5 bg-light">
                 <div class="container px-5">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3">This is where you can put the headline of the banner.</h1>
-                                <p class="lead fw-normal text-muted mb-4">Start Bootstrap was built on the idea that quality, functional website templates and themes should be available to everyone. Use our open source, free products, or support us by purchasing one of our premium products or services.</p>
-                                <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
+                                <h1 class="fw-bolder mb-3">Current Researches</h1>
+                                <!-- <p class="lead fw-normal text-muted mb-4">Start Bootstrap was built on the idea that quality, functional website templates and themes should be available to everyone. Use our open source, free products, or support us by purchasing one of our premium products or services.</p>
+                                <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </header>
-            <!-- About section one-->
-            <section class="py-5 bg-light" id="scroll-target">
+            <!-- Research section one-->
+            <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><a href="link of paper - 1"></a><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture1.png" alt="..." /></a></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder">Reaserch Paper - 1 title</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
-                        </div>
+                            <h2 class="fw-bolder">MHD Natural Convection of Bingham Nanofluid in a Heat Exchanger Based on MRT LBM.</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Amzad Hossain</p>
+                        </div><hr>
                     </div>
                 </div>
             </section>
-            <!-- About section two-->
+            <!-- Research two-->
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><a href="link of the paper - 2"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></a></div>
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture2.png" alt="..." /></a></div>
                         <div class="col-lg-6">
-                            <h2 class="fw-bolder">Research paper - 2 title</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
-                        </div>
+                            <h2 class="fw-bolder">MRT-LB Simulation of Soret and Dufour Effects on Thermosolutal Natural Convection of Nanofluid in a U-shape Porous Enclosure</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Md Mahadul Islam</p>
+                        </div><hr>
                     </div>
                 </div>
             </section>
-            <!-- Team members section-->
-            <section class="py-5 bg-light">
+            <!-- Research 3-->
+            <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
-                    <div class="text-center">
-                        <h2 class="fw-bolder">Our team</h2>
-                        <p class="lead fw-normal text-muted mb-5">Dedicated to quality and your success</p>
-                    </div>
-                    <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
-                        <div class="col mb-5 mb-5 mb-xl-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Ibbie Eckart</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5 mb-5 mb-xl-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Arden Vasek</h5>
-                                <div class="fst-italic text-muted">CFO</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5 mb-5 mb-sm-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Toribio Nerthus</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">Malvina Cilla</h5>
-                                <div class="fst-italic text-muted">CTO</div>
-                            </div>
-                        </div>
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture3.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">MHD Convective Heat Transfer Simulation of Temperature Dependent Viscosity based Hybrid Nanofluids in a Rectangular Enclosure with Multiple Heaters.</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Meratun Junnut Anee</p>
+                        </div><hr>
                     </div>
                 </div>
             </section>
+            <!-- Research 4-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture4.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Unsteady RANS Simulation Air Flow and Pollutant Dispersion in a Model Street Canyon with triangular Shapes Rooftop</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Umma Habiba Akter</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section><!-- Research 5-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture5.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">MRT-Lattice Boltzmann Simulation of Magnetic Field Effects on Heat Transfer from a Heater in a C-shaped Cavity  Filled with Non-Newtonian Hybrid Nanofluids</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Nur E Jannat Asha</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 6-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture6.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Forced Convection of Non-Newtonian Nanofluid in a Sinusoidal Wavy Channel</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Shayekh Ahmed Khan</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 7-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture7.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">MHD Natural Convection of Hybrid Nanofluid Along a Vertical ThinCylinder With Sinusoidal Wall Heat Flux</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Mashiyat Khan</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 8-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture8.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Lattice Boltzman Simulation of Cross diffusion ( Soret and Dufour ) on Natural convection of MWCNTs+ H2O nanofluids  in an L-shaped enclosure</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Khairunnahar Suchona</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 9-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture9.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Lattice Boltzmann Simulation of Bingham hybrid nanofluid in an inverted T-shape enclosure:Experimental Data Based</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Ismat Jahan</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 10-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <!-- <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture2.png" alt="..." /></a></div> -->
+                        <div class="col-lg-12">
+                            <h2 class="fw-bolder">LBM simulation of Bingham Nanofluid flow in a suddenly expanded channel.</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Muhammad Zawad Mahmud</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section><!-- Research 11-->
+            <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <!-- <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture1.png" alt="..." /></a></div> -->
+                        <div class="col-lg-12">
+                            <h2 class="fw-bolder">Natural Convection Of Hybrid Nanofluid In A Complex Wavy Surface With Brownian Motion And Thermophoresis Effect</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Shapla Akter</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 12-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture12.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">Lattice Boltzmann simulation of natural convection power-law nanofluid in an open cavity with adiabatic fins</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Israt Jahan Supti</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            <!-- Research 13-->
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><a href="#"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/research/Picture13.png" alt="..." /></a></div>
+                        <div class="col-lg-6">
+                            <h2 class="fw-bolder">MHD Thermosolutal convection of hybrid MWCNT-Fe3O4-water nanofluid along a vertical wavy surface with wall heat and mass flux</h2>
+                            <p class="lead fw-normal text-muted mb-0">-- Jawad Ibn Ahad</p>
+                        </div><hr>
+                    </div>
+                </div>
+            </section>
+            
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
