--- a/gallery.html
+++ b/gallery.html
@@ -23,11 +23,11 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
                         </ul>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; <a href="https://ib-prince.github.io/portfolio/">IB Prince</a> 2023</div></div>
                     <div class="col-auto">
                         <a class="link-light small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
