--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="css/custom.css">
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -23,11 +24,11 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,7 +58,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="assets/gallery/Picture15.png" class="d-block w-100" alt="...">
+                        <img src="assets/gallery/Picture12.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Third slide label</h5>
                           <p>Some representative placeholder content for the second slide.</p>
@@ -232,7 +233,7 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; <a href="https://ib-prince.github.io/portfolio/">IB Prince</a> 2023</div></div>
                     <div class="col-auto">
                         <a class="link-light small" href="#!">Privacy</a>
                         <span class="text-white mx-1">&middot;</span>
