--- a/people.html
+++ b/people.html
@@ -24,11 +24,11 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
                         </ul>
                     </div>
                 </div>
