--- a/publications.html
+++ b/publications.html
@@ -23,12 +23,12 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
-                            <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
-                            <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                          <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
+                          <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
+                          <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                          <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -202,19 +202,19 @@
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+          <div class="container px-5">
+              <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                  <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; <a href="https://ib-prince.github.io/portfolio/">IB Prince</a> 2023</div></div>
+                  <div class="col-auto">
+                      <a class="link-light small" href="#!">Privacy</a>
+                      <span class="text-white mx-1">&middot;</span>
+                      <a class="link-light small" href="#!">Terms</a>
+                      <span class="text-white mx-1">&middot;</span>
+                      <a class="link-light small" href="#!">Contact</a>
+                  </div>
+              </div>
+          </div>
+      </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
