--- a/people.html
+++ b/people.html
@@ -27,7 +27,8 @@
                             <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
                             <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                             <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="research_gallery.html">Research Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="group_gallery.html">Group Gallery</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
