--- a/research_gallery.html
+++ b/research_gallery.html
@@ -40,11 +40,10 @@
                 <div class="container px-5">
                     <div class="row justify-content-center">
                         <div class="text-center my-5">
-                            <h1 class="fw-bolder mb-3">Group Gallery</h1>
+                            <h1 class="fw-bolder mb-3">Research Gallery</h1>
                         </div>
-                        <img src="assets/gallery/Picture24.png" class="img-fluid" alt="">
                         <h4>CFD LAB 2022</h4>
-                        <P>From left to right: Munna, Any, Asha, Afroja Parvin, Mashiyat, Amzad, Md. Mamun Molla</P>
+                        <P>A little introduction to your research gallery page</P>
                     </div>
                 </div>
             </header>
@@ -52,21 +51,17 @@
 
             <div class="container">
                 <div class="row py-5 row-cols-xl-2 justify-content-between" id="gallery">
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture11.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture12.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture13.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture14.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture15.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture16.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture17.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture18.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture19.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture20.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture21.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture22.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture23.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture24.png" alt="..." />
-                    <img class="img-fluid mb-4 " src="assets/gallery/Picture25.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture1.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture2.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture3.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture4.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture5.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture6.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture7.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture8.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture9.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture12.png" alt="..." />
+                    <img class="img-fluid mb-4 " src="assets/research/Picture13.png" alt="..." />
                 </div>
             </div>
             
